--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -5,6 +5,6 @@
         "admin": "Admin",
         "logout": "Log out",
         "qa": "Q&A",
-        "loginRegiser": "Login/Register"
+        "loginRegister": "Login/Register"
     }
 }
