registration form finished

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -10,6 +10,12 @@
         "email": "Email",
         "password": "Password",
         "wrongCredentials": "Invalid email or password. Please try again.",
-        "serverProblem": "Something went wrong. Please try again later."
+        "serverProblem": "Something went wrong. Please try again later.",
+        "usernameTaken": "Username unavailable. Please choose another one.",
+        "username": "Username",
+        "confirmPassword": "Confirm password",
+        "mustEndWithLtu": "must end with @ltu.se",
+        "passwordsNoMatch": "Passwords do not match. Please try again.",
+        "mustEndWithLtuErrMsg": "Email must end with @ltu.se. Please try again."
     }
 }
