--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -30,6 +30,7 @@
         "confirmPassword": "Bekräfta lösenord",
         "mustEndWithLtu": "måste sluta på @ltu.se",
         "passwordsNoMatch": "Lösenorden matchar inte. Vänligen försök igen.",
-        "mustEndWithLtuErrMsg": "E-postadress måste sluta på @ltu.se. Vänligen försök igen."
+        "mustEndWithLtuErrMsg": "E-postadress måste sluta på @ltu.se. Vänligen försök igen.",
+        "emailTaken": "E-postadressen används redan. Prova en annan."
     }
 }
