--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -31,7 +31,7 @@
         "mustEndWithLtu": "måste sluta på @ltu.se",
         "passwordsNoMatch": "Lösenorden matchar inte. Vänligen försök igen.",
         "mustEndWithLtuErrMsg": "E-postadress måste sluta på @ltu.se. Vänligen försök igen.",
-        "emailTaken": "E-postadressen används redan. Prova en annan.",
+        "emailTaken": "E-postadressen används redan. Vänligen prova en annan.",
         "verifyEmail": "Ett verifieringsmail har skickats till din e-postadress. Vänligen kontrollera din inkorg och följ instruktionerna för att verifiera ditt konto."
     }
 }
