--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -33,6 +33,11 @@
         "mustEndWithLtuErrMsg": "E-postadress måste sluta på @ltu.se. Vänligen försök igen.",
         "emailTaken": "E-postadressen används redan. Vänligen prova en annan.",
         "verifyEmail": "Ett verifieringsmail har skickats till din e-postadress. Vänligen kontrollera din inkorg och följ instruktionerna för att verifiera ditt konto.",
-        "searchQuestionsPlaceholder": "Sök frågor efter titel, kurskod, kursnamn, tagg eller ämne."
+        "searchQuestionsPlaceholder": "Sök frågor efter titel, kurskod, kursnamn, tagg eller ämne.",
+        "searchQuestions": "Sök frågor",
+        "askAQuestion": "Ställ en fråga",
+        "teacher": "Lärare",
+        "categoryFilter": "Kategorifilter",
+        "topicFilter": "Ämnesfilter"
     }
 }
