replace successful register alert with custom modal

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -40,6 +40,7 @@
         "categoryFilter": "Category filter",
         "topicFilter": "Topic filter",
         "clickToHide": "Set question to hidden",
-        "clickToShow": "Set question to visible"
+        "clickToShow": "Set question to visible",
+        "ok": "Ok"
     }
 }
