--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -40,6 +40,7 @@
         "categoryFilter": "Kategorifilter",
         "topicFilter": "Ämnesfilter",
         "clickToHide": "Sätt fråga till dold",
-        "clickToShow": "Sätt fråga till synlig"
+        "clickToShow": "Sätt fråga till synlig",
+        "ok": "Ok"
     }
 }
