change a swedish translation

--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -42,7 +42,7 @@
         "clickToHide": "Sätt fråga till dold",
         "clickToShow": "Sätt fråga till synlig",
         "ok": "Ok",
-        "recentQuestions": "Nyliga Frågor",
+        "recentQuestions": "Senaste Frågor",
         "myQa": "Mina Frågor & Svar"
     }
 }
