--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -9,7 +9,7 @@
         "resolved": "Löst",
         "resolvedPlural": "Lösta",
         "unresolved": "Ej löst",
-        "unresolvedPlural": "Ej lösta",
+        "unresolvedPlural": "Ej Lösta",
         "askedBy": "Frågad av",
         "answer": "svar",
         "answers": "svar",
