fix some more css and change a prettier rule

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -11,7 +11,7 @@
         "unresolved": "Unresolved",
         "unresolvedPlural": "Unresolved",
         "askedBy": "Asked by",
-        "answer": "answers",
+        "answer": "answer",
         "answers": "answers",
         "lessThanMinuteAgo": "Less than a minute ago",
         "oneMinuteAgo": "One minute ago",
