almost finished, filtering works but need to test on user that has interacted. also a bit CSS remains

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -46,6 +46,9 @@
         "ok": "Ok",
         "all": "All",
         "recentQuestions": "Recent Questions",
-        "myQa": "My Q&A"
+        "myQa": "My Q&A",
+        "asked": "Asked",
+        "answered": "Answered",
+        "commented": "Commented"
     }
 }
