change categ ory to course and impl sorting so that selected course filter comes first

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -39,7 +39,7 @@
         "searchQuestions": "Search question",
         "askAQuestion": "Ask a question",
         "teacher": "Teacher",
-        "categoryFilter": "Category filter",
+        "categoryFilter": "Course filter",
         "topicFilter": "Topic filter",
         "clickToHide": "Set question to hidden",
         "clickToShow": "Set question to visible",
