--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -39,7 +39,7 @@
         "searchQuestions": "Sök frågor",
         "askAQuestion": "Ställ en fråga",
         "teacher": "Lärare",
-        "categoryFilter": "Kategorifilter",
+        "categoryFilter": "Kursfilter",
         "topicFilter": "Ämnesfilter",
         "clickToHide": "Sätt fråga till dold",
         "clickToShow": "Sätt fråga till synlig",
