74 integrate filtering under My Q&A with the other filtering alternatives (#33)
* memoize some tab content and create MyQASection component

* almost finished, filtering works but need to test on user that has interacted. also a bit CSS remains

* upgrade vitest because of github security warning

* finally filtering is working pretty good

* fix when clicking filter scroll btns too quick you mistakenly press the filter when reaching the end of the list

* change categ
ory to course and impl sorting so that selected course filter comes first

* rename function and add some comments

* update useSearchQuestions to only use one useEffect

* restructure useSearchQuestions to be less repetitive and more readable

* compute whats changed in useSearchQuestions useEffect in shorter way

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -39,13 +39,21 @@
         "searchQuestions": "Search question",
         "askAQuestion": "Ask a question",
         "teacher": "Teacher",
-        "categoryFilter": "Category filter",
+        "categoryFilter": "Course filter",
         "topicFilter": "Topic filter",
         "clickToHide": "Set question to hidden",
         "clickToShow": "Set question to visible",
         "ok": "Ok",
         "all": "All",
+        "questionListHeader": "Recent Questions",
         "recentQuestions": "Recent Questions",
-        "myQa": "My Q&A"
+        "myQa": "My Q&A",
+        "created": "Asked",
+        "answered": "Answered",
+        "commented": "Commented",
+        "noQuestionsFound": "No questions match those criteria",
+        "createdHeader": "Questions You've Asked",
+        "answeredHeader": "Questions You've Answered",
+        "commentedHeader": "Questions With Answers You've Commented On"
     }
 }
