--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -39,13 +39,21 @@
         "searchQuestions": "Sök frågor",
         "askAQuestion": "Ställ en fråga",
         "teacher": "Lärare",
-        "categoryFilter": "Kategorifilter",
+        "categoryFilter": "Kursfilter",
         "topicFilter": "Ämnesfilter",
         "clickToHide": "Sätt fråga till dold",
         "clickToShow": "Sätt fråga till synlig",
         "ok": "Ok",
         "all": "Alla",
+        "questionListHeader": "Senaste Frågor",
         "recentQuestions": "Senaste Frågor",
-        "myQa": "Mina Frågor & Svar"
+        "myQa": "Mina Frågor & Svar",
+        "created": "Frågat",
+        "answered": "Svarat",
+        "commented": "Kommenterat",
+        "noQuestionsFound": "Inga frågor matchar dessa kriterier",
+        "createdHeader": "Frågor Du Har Ställt",
+        "answeredHeader": "Frågor Du Har Svarat På",
+        "commentedHeader": "Frågor Med Svar Du Har Kommenterat"
     }
 }
