make top tabs in homeExtended take up more space

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -36,7 +36,7 @@
         "emailTaken": "Email is already in use. Please try another one.",
         "verifyEmail": "A verification email has been sent to your email address. Please check your inbox and follow the instructions to verify your account.",
         "searchQuestionsPlaceholder": "Search questions by title, course code, course name, tag, or topic",
-        "searchQuestions": "Search question",
+        "searchQuestions": "Search questions",
         "askAQuestion": "Ask a question",
         "teacher": "Teacher",
         "categoryFilter": "Course filter",
