add a tag functionality finished

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -72,6 +72,7 @@
         "add": "Add",
         "submitQuestion": "Submit Question",
         "public": "Public",
-        "nonPublic": "Not Public"
+        "nonPublic": "Not Public",
+        "tagLimitWarning": "Please limit your tags to 5 or fewer."
     }
 }
