add Back To QA button

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -73,6 +73,7 @@
         "submitQuestion": "Submit Question",
         "public": "Public",
         "nonPublic": "Not Public",
-        "tagLimitWarning": "Please limit your tags to 5 or fewer."
+        "tagLimitWarning": "Please limit your tags to 5 or fewer.",
+        "backToQA": "Back to Q&A"
     }
 }
