--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -73,6 +73,7 @@
         "submitQuestion": "Publicera Fråga",
         "public": "Offentlig",
         "nonPublic": "Ej offentlig",
-        "tagLimitWarning": "Vänligen begränsa dina taggar till högst 5."
+        "tagLimitWarning": "Vänligen begränsa dina taggar till högst 5.",
+        "backToQA": "Tillbaka till Frågor & Svar"
     }
 }
