--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -80,7 +80,11 @@
             "questionsInCourse": "Questions in course",
             "title": "Teacher Dashboard",
             "viewQuestions": "view questions",
-            "yourCourses": "Your Courses"
+            "yourCourses": "Your Courses",
+            "newTopicPlacholder": "New topic name...",
+            "createNewTopic": "Add Topic",
+            "edit": "Edit Topic",
+            "delete": "Delete Topic"
         }
     }
 }
