--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -84,7 +84,11 @@
             "newTopicPlacholder": "New topic name...",
             "createNewTopic": "Add Topic",
             "edit": "Edit Topic",
-            "delete": "Delete Topic"
+            "activate": "Activate Topic",
+            "deactivate": "Deactivate Topic",
+            "delete": "Delete Topic",
+            "cancelUpdate": "Cancel",
+            "saveUpdate": "Save"
         }
     }
 }
