Implement topic delete, update and create functionality.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -79,7 +79,7 @@
             "manageTopicsFor": "Manage Topics for",
             "questionsInCourse": "Questions in course",
             "title": "Teacher Dashboard",
-            "viewQuestions": "view questions",
+            "viewQuestions": "View questions",
             "yourCourses": "Your Courses",
             "newTopicPlacholder": "New topic name...",
             "createNewTopic": "Add Topic",
