--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -79,7 +79,7 @@
             "manageTopicsFor": "Hantera Frågor för",
             "questionsInCourse": "Frågor i kurs",
             "title": "Lärarpanel",
-            "viewQuestions": "granska frågor",
+            "viewQuestions": "Granska frågor",
             "yourCourses": "Dina Kurser",
             "newTopicPlacholder": "Ny kursdel...",
             "createNewTopic": "Ny kursdel",
