--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -74,7 +74,7 @@
         "public": "Public",
         "nonPublic": "Not Public",
         "tagLimitWarning": "Please limit your tags to 5 or fewer.",
-
+        "nrOfQuestionsFound": "Found {{count}} questions",
         "teacherDashboard": {
             "manageTopicsFor": "Manage Topics for",
             "questionsInCourse": "Questions in course",
