--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -74,7 +74,7 @@
         "public": "Offentlig",
         "nonPublic": "Ej offentlig",
         "tagLimitWarning": "Vänligen begränsa dina taggar till högst 5.",
-
+        "nrOfQuestionsFound": "Hittade {{count}} frågor",
         "teacherDashboard": {
             "manageTopicsFor": "Hantera Frågor för",
             "questionsInCourse": "Frågor i kurs",
