--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -75,10 +75,11 @@
         "nonPublic": "Not Public",
         "tagLimitWarning": "Please limit your tags to 5 or fewer.",
         "backToQA": "Back to Q&A",
+
         "teacherDashboard": {
+            "title": "Teacher Dashboard",
             "manageTopicsFor": "Manage Topics for",
             "questionsInCourse": "Questions in course",
-            "title": "Teacher Dashboard",
             "viewQuestions": "View questions",
             "yourCourses": "Your Courses",
             "newTopicPlacholder": "New topic name...",
@@ -92,6 +93,17 @@
             "cancelDelete": "Cancel",
             "confirmDelete": "Delete",
             "questionDelete": "Delete"
+        },
+
+        "answerCardComments": {
+            "title": "Comments",
+            "viewCommentInfo": "View comments",
+            "hideCommentInfo": "Hide comments",
+            "updateCommentInfo": "Update comment",
+            "deleteCommentInfo": "Delete comment",
+            "submitCommentInfo": "Submit comment",
+            "createCommentPlaceholder": "Add a comment..",
+            "submitComment": "Comment"
         }
     }
 }
