--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -92,6 +92,18 @@
             "cancelDelete": "Cancel",
             "confirmDelete": "Delete",
             "questionDelete": "Delete"
-        }
+        },
+        "courseManagement": "Course Management",
+        "userManagement": "User Management",
+        "tagManagement": "Tag Management",
+        "addNewCourse": "Add new Course Code",
+        "courseName": "Course Name",
+        "teacherName": "Initial Teacher(optional comma seperated)",
+        "courseCodePlaceHolder": "Enter the course code",
+        "courseNamePlaceHolder": "Enter the course name",
+        "teacherNamePlaceHolder": "Enter the teacher(s) name",
+        "addCourse": "+ Add Course",
+        "manageCourse": "Enter the course code or Name",
+        "manageTag": "Search tags"
     }
 }
