Add comment delete, update, and put requesthandlers to comment components.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -97,7 +97,8 @@
         },
 
         "answerCardComments": {
-            "title": "Comments",
+            "commentsListTitle": "View Comments",
+            "commentsCreatorTitle": "Create Comment",
             "viewCommentInfo": "View comments",
             "hideCommentInfo": "Hide comments",
             "updateCommentInfo": "Update comment",
