--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -101,6 +101,7 @@
             "commentsCreatorTitle": "Create Comment",
             "viewCommentInfo": "View comments",
             "hideCommentInfo": "Hide comments",
+            "createCommentInfo": "Create comment",
             "updateCommentInfo": "Update comment",
             "deleteCommentInfo": "Delete comment",
             "submitCommentInfo": "Submit comment",
