--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -101,6 +101,7 @@
             "commentsCreatorTitle": "Skapa Kommentar",
             "viewCommentInfo": "Se kommentarer",
             "hideCommentInfo": "Dölj kommentarer",
+            "createCommentInfo": "Skapa kommentar",
             "updateCommentInfo": "Uppdatera kommentar",
             "deleteCommentInfo": "Radera kommentar",
             "submitCommentInfo": "Skapa kommentar",
