Update create, delete, and put comments.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -97,6 +97,7 @@
         },
 
         "answerCardComments": {
+            "commentLabelMarker": "✔ Your latest comment",
             "commentsListTitle": "View Comments",
             "commentsCreatorTitle": "Create Comment",
             "viewCommentInfo": "View comments",
