--- a/src/locale/sv.json
+++ b/src/locale/sv.json
@@ -1,10 +1,6 @@
 {
     "translation": {
         "login": "Logga in",
-        "headerHeadline": "LTU Frågor & Svar",
-        "admin": "Admin",
-        "logout": "Logga ut",
-        "qa": "Frågor & Svar",
         "loginRegister": "Logga in/Registrering",
         "resolved": "Löst",
         "resolvedPlural": "Lösta",
@@ -77,6 +73,15 @@
         "nrOfQuestionsFound": "Hittade {{count}} frågor",
         "backToQA": "Tillbaka till Frågor & Svar",
 
+        "header": {
+            "headerHeadline": "LTU Frågor & Svar",
+            "linkAdmin": "Admin",
+            "linkLogout": "Logga ut",
+            "linkQA": "Frågor & Svar",
+            "loginRegister": "Logga in/Registrering",
+            "linkHelp": "Hjälp?"
+        },
+
         "teacherDashboard": {
             "manageTopicsFor": "Hantera Frågor för",
             "questionsInCourse": "Frågor i kurs",
@@ -111,28 +116,34 @@
         },
 
         "userGuide": {
-            "subtitleSubject": "Course",
-            "subtitleUnresolvedQuestion": "Unresolved Question",
-            "subtitleResolvedQuestion": "Resolved Question",
-            "subtitlePublicQuestion": "A Public Question",
-            "subtitleProtectedQuestion": "A Protected Question",
-            "subtitleTopic": "Topic",
-            "subtitleCreationDate": "Date",
-            "subtitleQuestionTitle": "Title",
-            "subtitleAuthor": "Author",
-            "subtitleAnswercount": "Answercount",
-            "subtitleTags": "Tags",
-            "descriptionSubject": "The course name and code associated with this question.",
-            "descriptionUnresolvedQuestion": "The author of the question has NOT accepted an answer as acceptable.",
-            "descriptionResolvedQuestion": "The author of the question has accepted an answer as acceptable.",
-            "descriptionPublicQuestion": "The question can be viewed by everyone, including users who are not logged in.",
-            "descriptionProtectedQuestion": "The question can only be viewed by logged-in users.",
-            "descriptionTopic": "The course topic this question belongs to.",
-            "descriptionCreationDate": "How long time ago the question was asked.",
-            "descriptionQuestionTitle": "The title of the question.",
-            "descriptionAuthor": "The user who created this question.",
-            "descriptionAnswercount": "The number of answers.",
-            "descriptionTags": "Tags used to mark the question."
+            "title": "Frågekort",
+            "subtitleSubject": "Kurs",
+            "subtitleUnresolvedQuestion": "En olöst fråga",
+            "subtitleResolvedQuestion": "En löst fråga",
+            "subtitlePublicQuestion": "En publik fråga",
+            "subtitleProtectedQuestion": "En skyddad fråga",
+            "subtitleTopic": "Kursdel",
+            "subtitleCreationDate": "Datum",
+            "subtitleQuestionTitle": "Tittel",
+            "subtitleAuthor": "Användare",
+            "subtitleAnswercount": "Antal svar",
+            "subtitleTags": "Markörer",
+            "descriptionSubject": "Kurs namn och kod som frågan tillhör.",
+            "descriptionUnresolvedQuestion": "Användaren som skapade frågan har EJ accepterat ett svar som har löst frågan.",
+            "descriptionResolvedQuestion": "Användaren som skapade frågan har accepterat ett svar som har löst frågan.",
+            "descriptionPublicQuestion": "Frågan kan ses av alla, även användare som inte är inloggade.",
+            "descriptionProtectedQuestion": "Frågan kan endast ses av inloggade användare.",
+            "descriptionTopic": "Kursdelen som frågan tillför.",
+            "descriptionCreationDate": "Hur länge sedan frågan ställdes.",
+            "descriptionQuestionTitle": "Frågans titel.",
+            "descriptionAuthor": "Användaren som ställde frågan.",
+            "descriptionAnswercount": "Antal svar frågan har.",
+            "descriptionTags": "Markörer som används för att markera en fråga.",
+            "defaultTopicName": "Kursdel",
+            "defaultSubjectName": "Namnet på kursen ",
+            "defaultSubjectCode": "Koden för kursen",
+            "defaultQuestionTitle": " How do you prevent retain cycles in Swift closures?",
+            "defaultTag": "En Markör"
         }
     }
 }
