Update translation for userguide and header.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -78,7 +78,7 @@
             "linkAdmin": "Admin",
             "linkLogout": "Log out",
             "linkQA": "Q&A",
-            "loginRegister": "Login/Register",
+            "linkLoginRegister": "Login/Register",
             "linkHelp": "Help?"
         },
 
